--- a/solid/templates/index.html
+++ b/solid/templates/index.html
@@ -101,10 +101,10 @@
 
                   <h2>Contact Details</h2>
                   <p class="address">
-						   <span>Abhishel Paudel</span><br>
-						   <span>Kathmandu, Nepal</span><br>
-						   <span>+977-9841061471</span><br>
-                     <span>abpaudel [at] outlook [dot] com</span>
+							<span>Abhishek Paudel</span><br>
+							<span>Kathmandu, Nepal</span><br>
+							<span>+977-9841061471</span><br>
+                    		<span>me@abpaudel.com.np</span>
 					   </p>
 
                </div>
