--- a/solid/templates/index.html
+++ b/solid/templates/index.html
@@ -18,18 +18,18 @@
 
 	<!-- CSS
     ================================================== -->
-   <link rel="stylesheet" href="{% static "home/css/default.css" %}">
-	<link rel="stylesheet" href="{% static "home/css/layout.css" %}">
-   <link rel="stylesheet" href="{% static "home/css/media-queries.css" %}">
-   <link rel="stylesheet" href="{% static "home/css/magnific-popup.css" %}">
+   <link rel="stylesheet" href="{% static 'home/css/default.css' %}">
+	<link rel="stylesheet" href="{% static 'home/css/layout.css' %}">
+   <link rel="stylesheet" href="{% static 'home/css/media-queries.css' %}">
+   <link rel="stylesheet" href="{% static 'home/css/magnific-popup.css' %}">
 
    <!-- Script
    ================================================== -->
-	<script src="{% static "home/js/modernizr.js" %}"></script>
+	<script src="{% static 'home/js/modernizr.js' %}"></script>
 
    <!-- Favicons
 	================================================== -->
-	<link rel="shortcut icon" href="{% static "img/favicon.ico"  %}">
+	<link rel="shortcut icon" href="{% static 'img/favicon.ico'  %}">
 
 </head>
 
@@ -84,7 +84,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="{% static "home/images/profilepic.jpg" %}" alt="" />
+            <img class="profile-pic"  src="{% static 'home/images/profilepic.jpg' %}" alt="" />
 
          </div>
 
@@ -111,7 +111,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="{% static 'home/Abhishek Paudel - CV.pdf' %}" class="button"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
@@ -376,14 +376,14 @@
    <!-- Java Script
    ================================================== -->
    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-   <script>window.jQuery || document.write('<script src="{% static "home/js/jquery-1.10.2.min.js" %}"><\/script>')</script>
-   <script type="text/javascript" src="{% static "home/js/jquery-migrate-1.2.1.min.js" %}"></script>
+   <script>window.jQuery || document.write("<script src='{% static 'home/js/jquery-1.10.2.min.js' %}'><\/script>")</script>
+   <script type="text/javascript" src="{% static 'home/js/jquery-migrate-1.2.1.min.js' %}"></script>
 
-   <script src="{% static "home/js/jquery.flexslider.js" %}"></script>
-   <script src="{% static "home/js/waypoints.js" %}"></script>
-   <script src="{% static "home/js/jquery.fittext.js" %}"></script>
-   <script src="{% static "home/js/magnific-popup.js" %}"></script>
-   <script src="{% static "home/js/init.js" %}"></script>
+   <script src="{% static 'home/js/jquery.flexslider.js' %}"></script>
+   <script src="{% static 'home/js/waypoints.js' %}"></script>
+   <script src="{% static 'home/js/jquery.fittext.js' %}"></script>
+   <script src="{% static 'home/js/magnific-popup.js' %}"></script>
+   <script src="{% static 'home/js/init.js' %}"></script>
 
 </body>
 
