--- a/solid/templates/index.html
+++ b/solid/templates/index.html
@@ -62,7 +62,7 @@
                <li><a href="https://www.linkedin.com/in/abpaudel"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://www.facebook.com/abhpdl"><i class="fa fa-facebook"></i></a></li>
                <li><a href="https://www.twitter.com/abpaudel"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="https://www.instagram/com/abpaudel"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://www.instagram.com/abpaudel"><i class="fa fa-instagram"></i></a></li>
                <li><a href="https://plus.google.com/+AbhishekPaudel13"><i class="fa fa-google-plus"></i></a></li>
 
             </ul>
@@ -357,7 +357,7 @@
                <li><a href="https://www.linkedin.com/in/abpaudel"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://www.facebook.com/abhpdl"><i class="fa fa-facebook"></i></a></li>
                <li><a href="https://www.twitter.com/abpaudel"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="https://www.instagram/com/abpaudel"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://www.instagram.com/abpaudel"><i class="fa fa-instagram"></i></a></li>
                <li><a href="https://plus.google.com/+AbhishekPaudel13"><i class="fa fa-google-plus"></i></a></li>
             </ul>
 
