social link fix and blog link added

--- a/solid/templates/index.html
+++ b/solid/templates/index.html
@@ -47,7 +47,8 @@
          <ul id="nav" class="nav">
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
             <li><a class="smoothscroll" href="#about">About</a></li>
-	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
+	        <li><a class="smoothscroll" href="#resume">Resume</a></li>
+	        <li><a href="/blog">Blog</a></li>
          </ul> <!-- end #nav -->
 
       </nav> <!-- end #nav-wrap -->
@@ -59,11 +60,11 @@
             	<span>#ComputerEngineer #AI #ML #SpaceNerd #Flutist</span></h3>
             <hr />
             <ul class="social">
-               <li><a href="https://www.linkedin.com/in/abpaudel"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="https://www.facebook.com/abhpdl"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="https://www.twitter.com/abpaudel"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="https://www.instagram.com/abpaudel"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="https://plus.google.com/+AbhishekPaudel13"><i class="fa fa-google-plus"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/abpaudel" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.facebook.com/abhpdl" target="_blank"><i class="fa fa-facebook"></i></a></li>
+               <li><a href="https://www.twitter.com/abpaudel" target="_blank"><i class="fa fa-twitter"></i></a></li>
+               <li><a href="https://www.instagram.com/abpaudel" target="_blank"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://plus.google.com/+AbhishekPaudel13" target="_blank"><i class="fa fa-google-plus"></i></a></li>
 
             </ul>
          </div>
@@ -354,11 +355,11 @@
          <div class="twelve columns">
 
             <ul class="social-links">
-               <li><a href="https://www.linkedin.com/in/abpaudel"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="https://www.facebook.com/abhpdl"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="https://www.twitter.com/abpaudel"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="https://www.instagram.com/abpaudel"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="https://plus.google.com/+AbhishekPaudel13"><i class="fa fa-google-plus"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/abpaudel" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.facebook.com/abhpdl" target="_blank"><i class="fa fa-facebook"></i></a></li>
+               <li><a href="https://www.twitter.com/abpaudel" target="_blank"><i class="fa fa-twitter"></i></a></li>
+               <li><a href="https://www.instagram.com/abpaudel" target="_blank"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://plus.google.com/+AbhishekPaudel13" target="_blank"><i class="fa fa-google-plus"></i></a></li>
             </ul>
 
             <ul class="copyright">
