--- a/solid/templates/index.html
+++ b/solid/templates/index.html
@@ -376,7 +376,7 @@
 
    <!-- Java Script
    ================================================== -->
-   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
    <script>window.jQuery || document.write("<script src='{% static 'home/js/jquery-1.10.2.min.js' %}'><\/script>")</script>
    <script type="text/javascript" src="{% static 'home/js/jquery-migrate-1.2.1.min.js' %}"></script>
 
