meta tags update

--- a/solid/templates/index.html
+++ b/solid/templates/index.html
@@ -9,8 +9,9 @@
    ================================================== -->
    <meta charset="utf-8">
 	<title>Abhishek Paudel</title>
-	<meta name="description" content="I completed my Bachelor's degree in Computer Engineering from Tribhuvan University, Institute of Engineering, Pulchowk Campus. I am currently looking forward to building my career in the field of AI/ML/DL.">
-	<meta name="author" content="">
+	<meta name="description" content="I am Abhishek Paudel. I recently completed my Bachelor's degree in Computer Engineering from Tribhuvan University, Institute of Engineering, Pulchowk Campus. I am currently looking forward to building my career in the field of AI/ML/DL.">
+	<meta name="author" content="Abhihek Paudel">
+   <meta name="keywords" content="abhishek,paudel,computer,engineer,pulchowk,engineering,ai,artificial intelligenge,deep learning,unicef,fusemachines,">
 
    <!-- Mobile Specific Metas
    ================================================== -->
@@ -313,8 +314,6 @@
          <div class="row">
 
             <div class="two columns header-col">
-
-               <h1><span>Client Testimonials</span></h1>
 
             </div>
 
