--- a/solid/templates/index.html
+++ b/solid/templates/index.html
@@ -1,55 +1,53 @@
 {% load i18n staticfiles %}
 <!DOCTYPE html>
-<!--[if lt IE 8 ]><html class="no-js ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="no-js ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 8)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
+<html class="no-js" lang="en">
 <head>
 
-   <!--- Basic Page Needs
+<!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Abhishek Paudel</title>
-	<meta name="description" content="I am Abhishek Paudel. I recently completed my Bachelor's degree in Computer Engineering from Tribhuvan University, Institute of Engineering, Pulchowk Campus. I am currently looking forward to building my career in the field of AI/ML/DL.">
-	<meta name="author" content="Abhihek Paudel">
+   <title>Abhishek Paudel</title>
+   <meta name="description" content="I am Abhishek Paudel. I recently completed my Bachelor's degree in Computer Engineering from Tribhuvan University, Institute of Engineering, Pulchowk Campus. I am currently looking forward to building my career in the field of AI/ML/DL.">
+   <meta name="author" content="Abhihek Paudel">
    <meta name="keywords" content="abhishek,paudel,computer,engineer,pulchowk,engineering,ai,artificial intelligenge,deep learning,unicef,fusemachines,">
 
-   <!-- Mobile Specific Metas
+<!-- Mobile Specific Metas
    ================================================== -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<!-- CSS
-    ================================================== -->
+<!-- CSS
+   ================================================== -->
    <link rel="stylesheet" href="{% static 'home/css/default.css' %}">
-	<link rel="stylesheet" href="{% static 'home/css/layout.css' %}">
+   <link rel="stylesheet" href="{% static 'home/css/layout.css' %}">
    <link rel="stylesheet" href="{% static 'home/css/media-queries.css' %}">
    <link rel="stylesheet" href="{% static 'home/css/magnific-popup.css' %}">
 
-   <!-- Script
+<!-- Script
    ================================================== -->
-	<script src="{% static 'home/js/modernizr.js' %}"></script>
+   <script src="{% static 'home/js/modernizr.js' %}"></script>
 
-   <!-- Favicons
-	================================================== -->
-	<link rel="shortcut icon" href="{% static 'img/favicon.ico'  %}">
+<!-- Favicons
+   ================================================== -->
+   <link rel="shortcut icon" href="{% static 'img/favicon.ico'  %}">
 
 </head>
 
 <body>
 
-   <!-- Header
+<!-- Header
    ================================================== -->
    <header id="home">
 
       <nav id="nav-wrap">
 
          <a class="mobile-btn" href="#nav-wrap" title="Show navigation">Show navigation</a>
-	      <a class="mobile-btn" href="#" title="Hide navigation">Hide navigation</a>
+         <a class="mobile-btn" href="#" title="Hide navigation">Hide navigation</a>
 
          <ul id="nav" class="nav">
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
             <li><a class="smoothscroll" href="#about">About</a></li>
-	        <li><a class="smoothscroll" href="#resume">Resume</a></li>
-	        <li><a href="/blog">Blog</a></li>
+            <li><a class="smoothscroll" href="#resume">Resume</a></li>
+            <li><a href="/blog">Blog</a></li>
          </ul> <!-- end #nav -->
 
       </nav> <!-- end #nav-wrap -->
@@ -58,27 +56,27 @@
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Abhishek Paudel.</h1>
             <h3>If someday I could understand myself, I bet I'd tell you.<br>
-            	<span>#ComputerEngineer #AI #ML #SpaceNerd #Flutist</span></h3>
-            <hr />
-            <ul class="social">
-               <li><a href="https://www.linkedin.com/in/abpaudel" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="https://www.facebook.com/abhpdl" target="_blank"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="https://www.twitter.com/abpaudel" target="_blank"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="https://www.instagram.com/abpaudel" target="_blank"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="https://plus.google.com/+AbhishekPaudel13" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+               <span>#ComputerEngineer #AI #ML #SpaceNerd #Flutist</span></h3>
+               <hr />
+               <ul class="social">
+                  <li><a href="https://www.linkedin.com/in/abpaudel" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                  <li><a href="https://www.facebook.com/abhpdl" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                  <li><a href="https://www.twitter.com/abpaudel" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                  <li><a href="https://www.instagram.com/abpaudel" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                  <li><a href="https://plus.google.com/+AbhishekPaudel13" target="_blank"><i class="fa fa-google-plus"></i></a></li>
 
-            </ul>
+               </ul>
+            </div>
          </div>
-      </div>
 
-      <p class="scrolldown">
-         <a class="smoothscroll" href="#about"><i class="icon-down-circle"></i></a>
-      </p>
+         <p class="scrolldown">
+            <a class="smoothscroll" href="#about"><i class="icon-down-circle"></i></a>
+         </p>
 
-   </header> <!-- Header End -->
+      </header> <!-- Header End -->
 
 
-   <!-- About Section
+<!-- About Section
    ================================================== -->
    <section id="about">
 
@@ -103,11 +101,11 @@
 
                   <h2>Contact Details</h2>
                   <p class="address">
-							<span>Abhishek Paudel</span><br>
-							<span>Kathmandu, Nepal</span><br>
-							<span>+977-9841061471</span><br>
-                    		<span>me@abpaudel.com.np</span>
-					   </p>
+                     <span>Abhishek Paudel</span><br>
+                     <span>Kathmandu, Nepal</span><br>
+                     <span>+977-9841061471</span><br>
+                     <span>me@abpaudel.com.np</span>
+                  </p>
 
                </div>
 
@@ -126,7 +124,7 @@
    </section> <!-- About Section End-->
 
 
-   <!-- Resume Section
+<!-- Resume Section
    ================================================== -->
    <section id="resume">
 
@@ -146,7 +144,7 @@
                   <h3>Tribhuvan University, Institute of Engineering, Pulchowk Campus</h3>
                   <p class="info">Bachelor's Degree in Computer Engineering <span>&bull;</span> <em class="date">2013 - 2017</em></p>
                   <p>
-                  	Some courses studied: Computer Programming, Data Structures and Algorithms, Theory of Computation, Objected Oriented Programming, Software Engineering, Computer Graphics, Digital Logic, Calculus, Linear Algebra, Applied Mathematics, Statistics, Probability, Discrete Structure, Numerical Methods, Artificial Intelligence, Data Mining, Operating System, Big Data Systems, Distributed Systems, Information Systems, Instrumentation, Embedded System, Database Management System, Computer Network, Microprocessor, Computer Organization and Architecture, Data Communication, Simulation and Modeling, Digital Signal Analysis and Processing, Project Management
+                     Some courses studied: Computer Programming, Data Structures and Algorithms, Theory of Computation, Objected Oriented Programming, Software Engineering, Computer Graphics, Digital Logic, Calculus, Linear Algebra, Applied Mathematics, Statistics, Probability, Discrete Structure, Numerical Methods, Artificial Intelligence, Data Mining, Operating System, Big Data Systems, Distributed Systems, Information Systems, Instrumentation, Embedded System, Database Management System, Computer Network, Microprocessor, Computer Organization and Architecture, Data Communication, Simulation and Modeling, Digital Signal Analysis and Processing, Project Management
                   </p>
                </div>
 
@@ -159,7 +157,7 @@
                   <h3>St. Xavier's College</h3>
                   <p class="info">10 + 2 Science <span>&bull;</span> <em class="date">2010 - 2012</em></p>
                   <p>
-                  	Some courses studied: Physics, Chemistry, Biology, Mathematics
+                     Some courses studied: Physics, Chemistry, Biology, Mathematics
                   </p>
                </div>
 
@@ -187,7 +185,7 @@
                   <p class="info">AI Fellow <span>&bull;</span> <em class="date">January 2018 - Present</em></p>
 
                   <p>
-                  Fusemachines AI Fellowship is a year long program that aims to train, educate and create a pool of AI specialists who will collaborate on solutions focused on implementing AI, Natural Language Processing, Computer Vision and Machine Learning techniques to address real world problems.
+                     Fusemachines AI Fellowship is a year long program that aims to train, educate and create a pool of AI specialists who will collaborate on solutions focused on implementing AI, Natural Language Processing, Computer Vision and Machine Learning techniques to address real world problems.
                   </p>
 
                </div>
@@ -202,8 +200,8 @@
                   <p class="info">Technical Consultant <span>&bull;</span> <em class="date">January 2017 — November 2017</em></p>
 
                   <p>
-                  Supported UNICEF Nepal CO in development and deployment U-report platform as a part of Shout Out For Health program initiated by Bill &amp; Melinda Gates Foundation. U-report is a free, SMS-based system that allows young people to speak out on what is happening in communities across their country, and work together with other community leaders and policy makers for positive change.
-              </p>
+                     Supported UNICEF Nepal CO in development and deployment U-report platform as a part of Shout Out For Health program initiated by Bill &amp; Melinda Gates Foundation. U-report is a free, SMS-based system that allows young people to speak out on what is happening in communities across their country, and work together with other community leaders and policy makers for positive change.
+                  </p>
 
                </div>
 
@@ -217,7 +215,7 @@
                   <p class="info">Event Coordinator <span>&bull;</span> <em class="date">November 2016 — March 2017</em></p>
                   Coordinated on-campus event of the Hult Prize at Tribhuvan University whose winning team competed in the regional finals in Dubai. The Hult Prize is a social impact start-up competition of students from around the world and organized by Hult Prize Foundation in partnership with Former US President Bill Clinton and the Clinton Global Initiative that grants its annual winner a seed funding of USD 1 million.
                   <p>
-                  
+
                   </p>
 
                </div>
@@ -232,7 +230,7 @@
                   <p class="info">Software Coordinator <span>&bull;</span> <em class="date">November 2016 — October 2017</em></p>
 
                   <p>
-                  Coordinated various software related projects and events for the LOCUS 2017 - 14th National Technological Festival. LOCUS is one of the biggest annual technological exhibition of the nation run fully by the undergraduate students of Department of Electronics &amp; Computer and Electrical Engineering of Institute of Engineering, Pulchowk Campus that promotes technical innovation and creation along with engineering studies through interaction and healthy competition among creative minds in technical fields.
+                     Coordinated various software related projects and events for the LOCUS 2017 - 14th National Technological Festival. LOCUS is one of the biggest annual technological exhibition of the nation run fully by the undergraduate students of Department of Electronics &amp; Computer and Electrical Engineering of Institute of Engineering, Pulchowk Campus that promotes technical innovation and creation along with engineering studies through interaction and healthy competition among creative minds in technical fields.
                   </p>
 
                </div>
@@ -247,7 +245,7 @@
                   <p class="info">Technical Consultant <span>&bull;</span> <em class="date">June 2016 — August 2016</em></p>
 
                   <p>
-                  Developed and deployed SMS based information and monitoring system on RapidPro platform for the UNICEF supported cash transfer program in earthquake affected districts to acquire data from local communities and present real-time/off-line analytics.
+                     Developed and deployed SMS based information and monitoring system on RapidPro platform for the UNICEF supported cash transfer program in earthquake affected districts to acquire data from local communities and present real-time/off-line analytics.
                   </p>
 
                </div>
@@ -262,7 +260,7 @@
                   <p class="info">Technical Consultant <span>&bull;</span> <em class="date">January 2015 — November 2015</em></p>
 
                   <p>
-                  Developed and deployed SMS based applications on RapidPro platform like Hero Teacher Network for communication with teachers in remote districts, UNICEF Staff Security System for tracking locations of UNICEF field staffs for their security, and Voice of Youth for 'Saathi Sanga Manka Kura' radio program to communicate with youths.
+                     Developed and deployed SMS based applications on RapidPro platform like Hero Teacher Network for communication with teachers in remote districts, UNICEF Staff Security System for tracking locations of UNICEF field staffs for their security, and Voice of Youth for 'Saathi Sanga Manka Kura' radio program to communicate with youths.
                   </p>
 
                </div>
@@ -283,29 +281,29 @@
 
          <div class="nine columns main-col">
 
-        
 
-				<div class="bars">
 
-				   <ul class="skills">
-					   <li><span class="bar-expand ninety"></span><em>Python</em></li>
-                  	<li><span class="bar-expand ninety"></span><em>C/C++</em></li>
-						<li><span class="bar-expand seventy"></span><em>Javascript</em></li>
-						<li><span class="bar-expand eighty"></span><em>Django</em></li>
-						<li><span class="bar-expand ninety"></span><em>SQL</em></li>
+            <div class="bars">
+
+               <ul class="skills">
+                  <li><span class="bar-expand ninety"></span><em>Python</em></li>
+                  <li><span class="bar-expand ninety"></span><em>C/C++</em></li>
+                  <li><span class="bar-expand seventy"></span><em>Javascript</em></li>
+                  <li><span class="bar-expand eighty"></span><em>Django</em></li>
+                  <li><span class="bar-expand ninety"></span><em>SQL</em></li>
                   <li><span class="bar-expand eighty"></span><em>HTML/CSS</em></li>
-					</ul>
+               </ul>
 
-				</div><!-- end skill-bars -->
+            </div><!-- end skill-bars -->
 
-			</div> <!-- main-col end -->
+         </div> <!-- main-col end -->
 
       </div> <!-- End skills -->
 
    </section> <!-- Resume Section End-->
 
 
-   <!-- Testimonials Section
+<!-- Testimonials Section
    ================================================== -->
    <section id="testimonials">
 
@@ -339,13 +337,13 @@
 
          </div> <!-- row ends -->
 
-       </div>  <!-- text-container ends -->
+      </div>  <!-- text-container ends -->
 
    </section> <!-- Testimonials Section End-->
 
 
 
-   <!-- footer
+<!-- footer
    ================================================== -->
    <footer>
 
@@ -373,12 +371,11 @@
 
    </footer> <!-- Footer End-->
 
-   <!-- Java Script
+<!-- Java Script
    ================================================== -->
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
    <script>window.jQuery || document.write("<script src='{% static 'home/js/jquery-1.10.2.min.js' %}'><\/script>")</script>
    <script type="text/javascript" src="{% static 'home/js/jquery-migrate-1.2.1.min.js' %}"></script>
-
    <script src="{% static 'home/js/jquery.flexslider.js' %}"></script>
    <script src="{% static 'home/js/waypoints.js' %}"></script>
    <script src="{% static 'home/js/jquery.fittext.js' %}"></script>
