--- a/solid/templates/index.html
+++ b/solid/templates/index.html
@@ -111,7 +111,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="{% static 'home/Abhishek Paudel - CV.pdf' %}" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="{% static 'home/Abhishek_Paudel_CV.pdf' %}" class="button"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
