--- a/solid/templates/index.html
+++ b/solid/templates/index.html
@@ -104,7 +104,7 @@
                      <span>Abhishek Paudel</span><br>
                      <span>Kathmandu, Nepal</span><br>
                      <span>+977-9841061471</span><br>
-                     <span>me@abpaudel.com.np</span>
+                     <span>me@apaudel.com.np</span>
                   </p>
 
                </div>
