--- a/solid/templates/cv.html
+++ b/solid/templates/cv.html
@@ -2,7 +2,7 @@
 {% load static%}
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Abhishek Paudel</title>
-
+	<link rel="shortcut icon" href="{% static 'img/favicon.ico'  %}">
 	<style type="text/css">
 	@font-face {
 		font-family: 'Oswald';
