updated courses studies

--- a/solid/templates/index.html
+++ b/solid/templates/index.html
@@ -144,7 +144,7 @@
                   <h3>Tribhuvan University, Institute of Engineering, Pulchowk Campus</h3>
                   <p class="info">Bachelor's Degree in Computer Engineering <span>&bull;</span> <em class="date">2013 - 2017</em></p>
                   <p>
-                     Some courses studied: Computer Programming, Data Structures and Algorithms, Theory of Computation, Objected Oriented Programming, Software Engineering, Computer Graphics, Digital Logic, Calculus, Linear Algebra, Applied Mathematics, Statistics, Probability, Discrete Structure, Numerical Methods, Artificial Intelligence, Data Mining, Operating System, Big Data Systems, Distributed Systems, Information Systems, Instrumentation, Embedded System, Database Management System, Computer Network, Microprocessor, Computer Organization and Architecture, Data Communication, Simulation and Modeling, Digital Signal Analysis and Processing, Project Management
+                     Some courses studied: Computer Programming, Data Structures and Algorithms, Theory of Computation, Objected Oriented Programming, Software Engineering, Computer Graphics, Digital Logic, Calculus, Linear Algebra, Applied Mathematics, Statistics, Probability, Discrete Structure, Numerical Methods, Artificial Intelligence, Data Mining, Big Data Systems, Distributed Systems, Operating System, Information Systems, Instrumentation, Embedded System, Database Management System, Computer Network, Microprocessor, Computer Organization and Architecture, Data Communication, Simulation and Modeling, Digital Signal Analysis and Processing, Project Management, IT Innovation and Entrepreneurship
                   </p>
                </div>
 
