fixed intro tagline

--- a/solid/templates/index.html
+++ b/solid/templates/index.html
@@ -55,9 +55,8 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Abhishek Paudel.</h1>
-            <h3>If someday I could understand myself, I bet I'd tell you.<br>
-               <span>#ComputerEngineer #AI #ML #SpaceNerd #Flutist</span></h3>
-               <hr />
+            <h3>Computer Engineer | AI/ML/DL Enthusiast | Space Nerd | Flutist</h3>
+               <hr/>
                <ul class="social">
                   <li><a href="https://www.linkedin.com/in/abpaudel" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                   <li><a href="https://www.facebook.com/abhpdl" target="_blank"><i class="fa fa-facebook"></i></a></li>
