--- a/solid/templates/index.html
+++ b/solid/templates/index.html
@@ -55,7 +55,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Abhishek Paudel.</h1>
-            <h3>Computer Engineer | AI/ML/DL Enthusiast | Space Nerd | Flutist</h3>
+            <h3><span>Computer Engineer | AI/ML/DL Enthusiast | Space Nerd | Flutist</span></h3>
                <hr/>
                <ul class="social">
                   <li><a href="https://www.linkedin.com/in/abpaudel" target="_blank"><i class="fa fa-linkedin"></i></a></li>
