updated for childgrant.ml

--- a/templates/myapi/childgrantdate_list.html
+++ b/templates/myapi/childgrantdate_list.html
@@ -58,14 +58,7 @@
 <body>
 
 <nav class="navbar navbar-inverse" role="navigation">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>    
-  </div>
-  <a class="navbar-brand" href="/childgrant">Nepal Child Grant Info</a>
+  <a class="navbar-brand" href="http://childgrant.ml/">Nepal Child Grant Info</a>
   <div class="navbar-collapse collapse">
 
   </div>
@@ -82,7 +75,7 @@
             <h3 class="text-left">Distribution Dates</h3>
         </div>
         <div class="col-xs-6 text-right">
-            <h4 class="text-right text-align"><a href="/childgrant?_export=csv" class="btn btn-info" role="button">Download CSV</a></h4>
+            <h4 class="text-right text-align"><a href="/?_export=csv" class="btn btn-info" role="button">Download CSV</a></h4>
         </div>
     </div>      
       <hr>
