--- a/solid/templates/index.html
+++ b/solid/templates/index.html
@@ -103,7 +103,7 @@
                      <span>Abhishek Paudel</span><br>
                      <span>Kathmandu, Nepal</span><br>
                      <span>+977-9841061471</span><br>
-                     <span>hi[at]apaudel.com.np</span>
+                     <span>hi AT apaudel DOT com DOT np</span>
                   </p>
 
                </div>
