--- a/solid/templates/index.html
+++ b/solid/templates/index.html
@@ -55,7 +55,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Abhishek Paudel.</h1>
-            <h3><span>Computer Engineer | AI/ML/DL Enthusiast | Space Nerd | Flutist</span></h3>
+            <h3><span>Computer Engineer | AI &amp; Machine Learning Enthusiast | Space Nerd | Flutist</span></h3>
                <hr/>
                <ul class="social">
                   <li><a href="https://www.linkedin.com/in/abpaudel" target="_blank"><i class="fa fa-linkedin"></i></a></li>
@@ -91,7 +91,7 @@
 
             <h2>About Me</h2>
 
-            <p>I am Abhishek Paudel. I recently completed my Bachelor's degree in Computer Engineering from Tribhuvan University, Institute of Engineering, Pulchowk Campus. I am currently looking forward to building my career in the field of AI/ML/DL.
+            <p>I am Abhishek Paudel. I recently completed my Bachelor's degree in Computer Engineering from Tribhuvan University, Institute of Engineering, Pulchowk Campus. I am currently looking forward to building my career in the field of AI &amp; Machine Learning.
             </p>
 
             <div class="row">
