rearranged work experiences and added new info

--- a/solid/templates/cv.html
+++ b/solid/templates/cv.html
@@ -322,7 +322,7 @@
 						<ul>
 							<li><i>Artificial Intelligence Fellowship, Fusemachines Nepal:</i> Fusemachines AI Fellowship is a year long program that aims to train, educate and create a pool of AI specialists who will collaborate on solutions focused on implementing AI, Natural Language Processing, Computer Vision and Machine Learning techniques to address real world problems. (2017)</li>
 							<li><i>Winner, LOCUS Hack-A-Week:</i> Awarded 1st prize in social impact category on the national level hack-a-thon LOCUS Hack-A-Week for building a web-based manpower agencies rating and reviewing platform for migrant workers to cope with increasing fraud by manpower agencies. (2016)</li>
-							<li><i>Winner, Microsoft YouthSpark Challenge for Change Global Contest:</i> Won the global contest for the idea 'Telemedicine in Rural Parts of Nepal'. The competition included participants from more than 100 countries who competed with their ideas about how they want to sparkle change in their communities through technology. (2015)</li>
+							<li><i>Winner, Microsoft YouthSpark Challenge for Change Global Contest:</i> Won the global contest for presenting an innovative approach to connect rural parts of Nepal through telemedicine. The competition included participants from more than 100 countries who presented their innovative ideas about how they want to sparkle change in their communities through technology. (2015)</li>
 							<li><i>Microsoft Student Partner, Microsoft:</i> Microsoft Student Partner is a worldwide recognizable program of Microsoft to sponsor students majoring in disciplines related to technology by making accessible various state-of-art tools and trainings free of cost. (2014)</li>
 							<li><i>2nd Runner Up, ChildApp Appathon:</i> Awarded 3rd prize for building SMS based child/maternal health care and birth registration system prototype in national level application building competition, ChildApp Appathon, jointly organized by Microsoft Innovation Center Nepal, UNICEF and Child Reach Nepal. (2014)</li>
 						</ul>
@@ -366,12 +366,21 @@
 			<h2 class="title">Professional Experience</h2>
 			<div class="set">
 				<div class="item">
+					<h3><span class="company l">Nepal Participatory Action Network</span>
+						<span class="date r">February 2018 — Present</span>
+					</h3>
+					<span class="clear"></span>
+					<span class="job_title"><i>Technical Consultant</i></span>
+					<span class="info">Developed and piloted the first of its kind SMS based information dissemination and monitoring system for Government of Nepal to enhance its existing management information system used for social security allowance program. This new SMS based system would automatically acquire information about social security allowance from concerned authorities in each local level, send this information to registered beneficiaries and also make it available on public website. Furthermore, it would also interactively survey the beneficiaries through SMS to inquire about effectiveness of the program.</span><span class="clear"> </span>
+				</div>
+				<br>
+				<div class="item">
 					<h3><span class="company l">Equal Access Nepal</span>
 						<span class="date r">January 2017 — November 2017</span>
 					</h3>
 					<span class="clear"> </span>
 					<span class="job_title"><i>Technical Consultant</i></span>
-					<span class="info">Supported UNICEF Nepal CO in development and deployment U-report platform as a part of Shout Out For Health program initiated by Bill &amp; Melinda Gates Foundation. U-report is a free, SMS-based system that allows young people to speak out on what is happening in communities across their country, and work together with other community leaders and policy makers for positive change.
+					<span class="info">Provided technical support to UNICEF Nepal CO in development and deployment U-report platform as a part of Shout Out For Health program initiated by Bill &amp; Melinda Gates Foundation. U-report is a free, SMS-based system that allows young people use their mobile phones to speak out on what is happening in communities across their country, and work together with other community leaders and policy makers for positive change. These voices and opinions of young people is visualized in real-time on public website.
 					</span><span class="clear"> </span>
 				</div>
 				<br>
@@ -396,26 +405,13 @@
 				</div>
 				<br>
 				<div class="item">
-					<h3><span class="company l">Nepal Participatory Action Network</span>
-						<span class="date r">June 2016 — August 2016</span>
-					</h3>
-					<span class="clear"></span>
-					<span class="job_title"><i>Technical Consultant</i></span>
-					<span class="info">Developed and deployed SMS based information and monitoring system on RapidPro platform for the UNICEF supported cash transfer program in earthquake affected districts to acquire data from local communities and present real-time/off-line analytics. </span><span class="clear"> </span>
-				</div>
-				<br>
-				<div class="item">
 					<h3><span class="company l">United Nations Children's Fund (UNICEF) Nepal Country Office</span>
 						<span class="date r">January 2015 — November 2015</span>
 					</h3>
 					<span class="clear"> </span>
 					<span class="job_title"><i>Technical Consultant</i></span>
-					<span class="info">Developed and deployed SMS based applications on RapidPro platform like Hero Teacher Network for communication with teachers in remote districts, UNICEF Staff Security System for tracking locations of UNICEF field staffs for their security, and Voice of Youth for 'Saathi Sanga Manka Kura' radio program to communicate with youths.</span><span class="clear"> </span>
+					<span class="info">Developed and deployed various SMS based applications along with real-time/off-line analytics for tasks like communication with teachers in remote districts, location tracking of UNICEF field staffs for security purposes and information dissemination &amp; monitoring of UNICEF supported cash transfer program. These applications proved to be highly valuable and useful during the post-earthquake period and benefited more than half a million people in earthquake affected districts of Nepal directly or indirectly.</span><span class="clear"> </span>
 				</div>
-
-
-
-
 			</div>
 			<div class="clear"> </div>
 		</div>
@@ -431,7 +427,7 @@
 							<li><i>Participant</i>, International Workshop on Data Analytics and Machine Intelligence, Nepal (2017)</li>
 							<li><i>Participant</i>, Asia-Pacific HLM3 Youth Innovation Challenge Workshop, Kuala Lumpur, Malaysia (2016)</li>
 							<li><i>Delegate</i>, Slush 2015, Helsinki, Finland (2015)</li>
-							<li>Speaker, Global Innovations for Children and Youth Summit, Helsinki, Finland (2015)</li>
+							<li><i>Speaker</i>, Global Innovations for Children and Youth Summit, Helsinki, Finland (2015)</li>
 							<li><i>Participant</i>, Me to We Youth Volunteer Trip, Maasai Mara, Kenya (2015)</li>
 							<li><i>Mentor</i>, Assistive Appathon by UNICEF, Google and MIC Nepal (2015)</li>
 							<li><i>Mentor</i>, Wearables Appathon by UNICEF and MIC Nepal (2015)</li>
@@ -445,6 +441,7 @@
 			</div>
 			<div class="clear"> </div>
 		</div>
+
 
 		<div class="section section-references">
 			<h2 class="title">References</h2>
