updated info about LOCUS

--- a/solid/templates/cv.html
+++ b/solid/templates/cv.html
@@ -400,7 +400,7 @@
 					</h3>
 					<span class="clear"> </span>
 					<span class="job_title"><i>Software Coordinator</i></span>
-					<span class="info">Coordinated various software related projects and events for the LOCUS 2017 - 14th National Technological Festival. LOCUS is one of the biggest annual technological exhibition of the nation run fully by the undergraduate students of Department of Electronics &amp; Computer and Electrical Engineering of Institute of Engineering, Pulchowk Campus that promotes technical innovation and creation along with engineering studies through interaction and healthy competition among creative minds in technical fields.
+					<span class="info">Coordinated various software related projects, hack-a-thons, talk shows and the main three-day exhibition of LOCUS 2017 - 14th National Technological Festival. LOCUS is one of the biggest annual technological exhibition of the nation run fully by the undergraduate students of Department of Electronics &amp; Computer and Electrical Engineering of Pulchowk Campus, Institute of Engineering, Tribhuvan University that promotes technical innovation and creation along with engineering studies through interaction and healthy competition among creative minds in technical fields.
 					</span><span class="clear"> </span>
 				</div>
 				<br>
