--- a/solid/templates/index.html
+++ b/solid/templates/index.html
@@ -7,7 +7,7 @@
    ================================================== -->
    <meta charset="utf-8">
    <title>Abhishek Paudel</title>
-   <meta name="description" content="I am Abhishek Paudel. I recently completed my Bachelor's degree in Computer Engineering from Tribhuvan University, Institute of Engineering, Pulchowk Campus. I am currently looking forward to building my career in the field of AI/ML/DL.">
+   <meta name="description" content="I am Abhishek Paudel. I recently completed my Bachelor's degree in Computer Engineering from Tribhuvan University, Institute of Engineering, Pulchowk Campus. I am currently looking forward to building my career in the field of AI and Machine Learning.">
    <meta name="author" content="Abhihek Paudel">
    <meta name="keywords" content="abhishek,paudel,computer,engineer,pulchowk,engineering,ai,artificial intelligenge,deep learning,unicef,fusemachines,">
 
@@ -56,23 +56,23 @@
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Abhishek Paudel.</h1>
             <h3><span>Computer Engineer | AI &amp; Machine Learning Enthusiast | Space Nerd | Flutist</span></h3>
-               <hr/>
-               <ul class="social">
-                  <li><a href="https://www.linkedin.com/in/abpaudel" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                  <li><a href="https://www.facebook.com/abhpdl" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                  <li><a href="https://www.twitter.com/abpaudel" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="https://www.instagram.com/abpaudel" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                  <li><a href="https://plus.google.com/+AbhishekPaudel13" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+            <hr/>
+            <ul class="social">
+               <li><a href="https://www.linkedin.com/in/abpaudel" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.facebook.com/abhpdl" target="_blank"><i class="fa fa-facebook"></i></a></li>
+               <li><a href="https://www.twitter.com/abpaudel" target="_blank"><i class="fa fa-twitter"></i></a></li>
+               <li><a href="https://www.instagram.com/abpaudel" target="_blank"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://plus.google.com/+AbhishekPaudel13" target="_blank"><i class="fa fa-google-plus"></i></a></li>
 
-               </ul>
-            </div>
+            </ul>
          </div>
+      </div>
 
-         <p class="scrolldown">
-            <a class="smoothscroll" href="#about"><i class="icon-down-circle"></i></a>
-         </p>
+      <p class="scrolldown">
+         <a class="smoothscroll" href="#about"><i class="icon-down-circle"></i></a>
+      </p>
 
-      </header> <!-- Header End -->
+   </header> <!-- Header End -->
 
 
 <!-- About Section
@@ -91,7 +91,7 @@
 
             <h2>About Me</h2>
 
-            <p>I am Abhishek Paudel. I recently completed my Bachelor's degree in Computer Engineering from Tribhuvan University, Institute of Engineering, Pulchowk Campus. I am currently looking forward to building my career in the field of AI &amp; Machine Learning.
+            <p>I am Abhishek Paudel. I recently completed my Bachelor's degree in Computer Engineering from Tribhuvan University, Institute of Engineering, Pulchowk Campus. I am currently looking forward to building my career in the field of AI and Machine Learning.
             </p>
 
             <div class="row">
@@ -195,11 +195,26 @@
 
                <div class="twelve columns">
 
+                  <h3>Nepal Participatory Action Network</h3>
+                  <p class="info">Technical Consultant <span>&bull;</span> <em class="date">February 2018 — Present</em></p>
+
+                  <p>
+                     Developed and piloted the first of its kind SMS based information dissemination and monitoring system for Government of Nepal to enhance its existing management information system used for social security allowance program. This new SMS based system would automatically acquire information about social security allowance from concerned authorities in each local level, send this information to registered beneficiaries and also make it available on public website. Furthermore, it would also interactively survey the beneficiaries through SMS to inquire about effectiveness of the program.
+                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
                   <h3>Equal Access Nepal</h3>
                   <p class="info">Technical Consultant <span>&bull;</span> <em class="date">January 2017 — November 2017</em></p>
 
                   <p>
-                     Supported UNICEF Nepal CO in development and deployment U-report platform as a part of Shout Out For Health program initiated by Bill &amp; Melinda Gates Foundation. U-report is a free, SMS-based system that allows young people to speak out on what is happening in communities across their country, and work together with other community leaders and policy makers for positive change.
+                     Provided technical support to UNICEF Nepal CO in development and deployment U-report platform as a part of Shout Out For Health program initiated by Bill &amp; Melinda Gates Foundation. U-report is a free, SMS-based system that allows young people use their mobile phones to speak out on what is happening in communities across their country, and work together with other community leaders and policy makers for positive change. These voices and opinions of young people is visualized in real-time on public website.
                   </p>
 
                </div>
@@ -229,22 +244,7 @@
                   <p class="info">Software Coordinator <span>&bull;</span> <em class="date">November 2016 — October 2017</em></p>
 
                   <p>
-                     Coordinated various software related projects and events for the LOCUS 2017 - 14th National Technological Festival. LOCUS is one of the biggest annual technological exhibition of the nation run fully by the undergraduate students of Department of Electronics &amp; Computer and Electrical Engineering of Institute of Engineering, Pulchowk Campus that promotes technical innovation and creation along with engineering studies through interaction and healthy competition among creative minds in technical fields.
-                  </p>
-
-               </div>
-
-            </div> <!-- item end -->
-
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3>Nepal Participatory Action Network</h3>
-                  <p class="info">Technical Consultant <span>&bull;</span> <em class="date">June 2016 — August 2016</em></p>
-
-                  <p>
-                     Developed and deployed SMS based information and monitoring system on RapidPro platform for the UNICEF supported cash transfer program in earthquake affected districts to acquire data from local communities and present real-time/off-line analytics.
+                     Coordinated various software related projects, hack-a-thons, talk shows and the main three-day exhibition of LOCUS 2017 - 14th National Technological Festival. LOCUS is one of the biggest annual technological exhibition of the nation run fully by the undergraduate students of Department of Electronics &amp; Computer and Electrical Engineering of Pulchowk Campus, Institute of Engineering, Tribhuvan University that promotes technical innovation and creation along with engineering studies through interaction and healthy competition among creative minds in technical fields.
                   </p>
 
                </div>
@@ -259,7 +259,7 @@
                   <p class="info">Technical Consultant <span>&bull;</span> <em class="date">January 2015 — November 2015</em></p>
 
                   <p>
-                     Developed and deployed SMS based applications on RapidPro platform like Hero Teacher Network for communication with teachers in remote districts, UNICEF Staff Security System for tracking locations of UNICEF field staffs for their security, and Voice of Youth for 'Saathi Sanga Manka Kura' radio program to communicate with youths.
+                     Developed and deployed various SMS based applications along with real-time/off-line analytics for tasks like communication with teachers in remote districts, location tracking of UNICEF field staffs for security purposes and information dissemination &amp; monitoring of UNICEF supported cash transfer program. These applications proved to be highly valuable and useful during the post-earthquake period and benefited more than half a million people in earthquake affected districts of Nepal directly or indirectly.
                   </p>
 
                </div>
